--- a/.github/workflows/ci-aws.yml
+++ b/.github/workflows/ci-aws.yml
@@ -1,4 +1,4 @@
-# secrets: AWS_ACCOUNT_ID, AWS_ROLE_ARN
+# secrets: AWS_ACCOUNT_ID, AWS_ROLE_ARN_ECR_PUSH
 
 name: CI (AWS ECR)
 
@@ -10,7 +10,7 @@ on:
 
 env:
   AWS_REGION: eu-central-1
-  ECR_REGISTRY: ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.eu-west-1.amazonaws.com
+  ECR_REGISTRY: ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.eu-central-1.amazonaws.com
   PROJECT_NAME: finpay
 
 jobs:
@@ -74,7 +74,7 @@ jobs:
         if: github.event_name == 'push' && github.ref == 'refs/heads/main'
         uses: aws-actions/configure-aws-credentials@v4
         with:
-          role-to-assume: ${{ secrets.AWS_ROLE_ARN }}
+          role-to-assume: ${{ secrets.AWS_ROLE_ARN_ECR_PUSH }}
           aws-region: ${{ env.AWS_REGION }}
 
       - name: Login to Amazon ECR
@@ -156,7 +156,7 @@ jobs:
         if: github.event_name == 'push' && github.ref == 'refs/heads/main'
         uses: aws-actions/configure-aws-credentials@v4
         with:
-          role-to-assume: ${{ secrets.AWS_ROLE_ARN }}
+          role-to-assume: ${{ secrets.AWS_ROLE_ARN_ECR_PUSH }}
           aws-region: ${{ env.AWS_REGION }}
 
       - name: Login to Amazon ECR
