--- a/payment-worker/pom.xml
+++ b/payment-worker/pom.xml
@@ -14,6 +14,7 @@
     <properties>
         <java.version>17</java.version>
         <spring.boot.version>3.3.3</spring.boot.version>
+        <tomcat.version>10.1.35</tomcat.version>
     </properties>
 
     <dependencyManagement>
