--- a/k8s/finpay-app/Chart.yaml
+++ b/k8s/finpay-app/Chart.yaml
@@ -1,6 +1,8 @@
 apiVersion: v2
 name: finpay-app
-description: A Helm chart for Kubernetes
+description: FinPay Payment Platform - API and Worker deployments
 type: application
-version: 0.1.0
-appVersion: "1.16.0"
+version: 1.0.0
+appVersion: "v1.0.0"
+maintainers:
+  - name: FinPay Platform Team
