new docker files

--- a/app/payment-api/Dockerfile
+++ b/app/payment-api/Dockerfile
@@ -1,90 +1,50 @@
-# Build
-FROM eclipse-temurin:17-jdk-alpine AS builder
+# Build stage
+FROM eclipse-temurin:17-jdk-alpine AS build
 WORKDIR /build
+
 RUN apk add --no-cache maven
-#   Install Maven
-#   eclipse-temurin = official OpenJDK distribution (trusted, maintained by Adoptium)
-#   17-jdk = Java 17 with full JDK (needed for compilation)
-#   alpine = minimal Linux (~5MB vs ~200MB for Debian)
-#   AS builder = names this stage for reference later
 
-
-
-# Layered build for faster rebuilds
-COPY pom.xml . 
-#Copy only pom.xml first to leverage Docker layer caching
+# Cache dependencies
+COPY pom.xml .
 RUN mvn dependency:go-offline -B
-# Download dependencies only (cached)
+
+# Build application
 COPY src ./src
-# Now copy the source code
+RUN mvn clean package -DskipTests -B
 
 
-RUN mvn clean package -DskipTests -B && \
-    java -Djarmode=layertools -jar target/payment-api-1.0.0.jar extract --destination extracted
-#Build JAR and extract layers
-#-DskipTests = tests run in CI, not in Docker build
-#-B = batch mode (no interactive prompts)
-#java -Djarmode=layertools ... extract = Spring Boot feature that splits JAR into layers:
-#dependencies/ - third-party libs (rarely change)
-#spring-boot-loader/ - Spring loader (rarely change)
-#snapshot-dependencies/ - snapshot libs
-#application/ - app code (
 
 
-###############################
-#############Runtime###########
-###############################
-FROM eclipse-temurin:17-jre-alpine AS runtime
-#Final image uses JRE not JDK to reduce size (JRE - only runtime)
+##################################################
+# Runtime stage
+FROM eclipse-temurin:17-jre-alpine
 
-LABEL org.opencontainers.image.title="payment-api" \
-      org.opencontainers.image.version="1.0.0"
-
+# Install runtime dependencies
 RUN apk upgrade --no-cache && \
-    apk add --no-cache curl dumb-init && \
+    apk add --no-cache curl && \
     rm -rf /var/cache/apk/*
-#apk upgrade = install security patches
-#curl = needed for healthcheck
-#dumb-init = proper signal handling (explained below)
-#rm -rf /var/cache/apk/* = remove package cache
 
 # Create non-root user
-RUN addgroup -g 1001 -S appgroup && \
+RUN addgroup -g 1001 appgroup && \
     adduser -u 1001 -S appuser -G appgroup
 
 WORKDIR /app
-COPY --from=builder /build/extracted/dependencies/ ./
-COPY --from=builder /build/extracted/spring-boot-loader/ ./
-COPY --from=builder /build/extracted/snapshot-dependencies/ ./
-COPY --from=builder /build/extracted/application/ ./
-#copy all layers from build stage
-#dependencies/ - third-party libs  → cached
-#spring-boot-loader/ - Spring loader  → cached
-#snapshot-dependencies/ - snapshots 
-#application/ - app code → changes most often
 
+# Copy JAR from build stage
+COPY --from=build /build/target/payment-api-*.jar app.jar
 
-RUN chown -R appuser:appgroup /app
+RUN chown appuser:appgroup app.jar
 
-USER appuser:appgroup
-#switch to non-root user
+USER appuser
 
 EXPOSE 8080
 
-#-XX:+UseContainerSupport = JVM respects container memory limits (not host memory)
-#-XX:MaxRAMPercentage=75.0 = use 75% of container's memory limit for heap
-#-XX:+ExitOnOutOfMemoryError = crash cleanly on OOM (Kubernetes will restart)
-ENV JAVA_OPTS="-XX:+UseContainerSupport -XX:MaxRAMPercentage=75.0 -XX:+ExitOnOutOfMemoryError" \
-    PAYMENT_DB_URL="jdbc:postgresql://localhost:5432/payments" \
-    PAYMENT_DB_USER="payments" \
+ENV PAYMENT_DB_URL="jdbc:postgresql://localhost:5432/payments"\
+    PAYMENT_DB_USER="" \
     PAYMENT_DB_PASSWORD="" \
     PAYMENT_WORKER_BASE_URL="http://payment-worker:8090"
 
-HEALTHCHECK --interval=30s --timeout=10s --start-period=60s --retries=3 \
+HEALTHCHECK --interval=30s --timeout=5s --start-period=30s --retries=3 \
     CMD curl -f http://localhost:8080/actuator/health || exit 1
 
-ENTRYPOINT ["dumb-init", "--"]
-CMD ["sh", "-c", "exec java $JAVA_OPTS org.springframework.boot.loader.launch.JarLauncher"]
-#In Linux, PID 1 has special behavior - ignores signals by default
-#dumb-init runs as PID 1 and forwards signals to Java process
-#exec replaces shell with Java process
+CMD ["java", "-jar", "app.jar"]
