--- a/k8s/finpay-app/templates/serviceaccount.yaml
+++ b/k8s/finpay-app/templates/serviceaccount.yaml
@@ -17,3 +17,13 @@ metadata:
     {{- include "finpay.labels" . | nindent 4 }}
   annotations:
     eks.amazonaws.com/role-arn: {{ .Values.iam.paymentWorkerRoleArn }}
+---
+apiVersion: v1
+kind: ServiceAccount
+metadata:
+  name: payment-worker
+  namespace: {{ .Values.global.namespace }}
+  labels:
+    {{- include "finpay.labels" . | nindent 4 }}
+  annotations:
+      eks.amazonaws.com/role-arn: {{ .Values.iam.externalSecretsRoleArn }}
