fix: update ClusterSecretStore configuration and correct ServiceAccount name

--- a/k8s/finpay-app/templates/cluster-secret-store.yaml
+++ b/k8s/finpay-app/templates/cluster-secret-store.yaml
@@ -1,13 +1,14 @@
- kind: ClusterSecretStore
-  metadata:
-    name: aws-secrets-manager
-  spec:
-    provider:
-      aws:
-        service: SecretsManager
-        region: ${AWS_REGION}
-        auth:
-          jwt:
-            serviceAccountRef:
-              name: external-secrets
-              namespace: prod
+apiVersion: external-secrets.io/v1beta1
+kind: ClusterSecretStore
+metadata:
+  name: aws-secrets-manager
+spec:
+  provider:
+    aws:
+      service: SecretsManager
+      region: {{ .Values.alb_controller.region }}
+      auth:
+        jwt:
+          serviceAccountRef:
+            name: external-secrets
+            namespace: {{ .Values.global.namespace }}
