--- a/k8s/finpay-app/templates/serviceaccount.yaml
+++ b/k8s/finpay-app/templates/serviceaccount.yaml
@@ -21,9 +21,9 @@ metadata:
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: payment-worker
+  name: external-secrets
   namespace: {{ .Values.global.namespace }}
   labels:
     {{- include "finpay.labels" . | nindent 4 }}
   annotations:
-      eks.amazonaws.com/role-arn: {{ .Values.iam.externalSecretsRoleArn }}
+    eks.amazonaws.com/role-arn: {{ .Values.iam.externalSecretsRoleArn }}
