fix: correct externalSecretsRoleArn syntax and update payment_namespace to 'prod' feat: add RDS access rule from EKS cluster-managed security group refactor: adjust IAM roles and outputs for enable_irsa configuration

--- a/k8s/finpay-app/values-prod.yaml
+++ b/k8s/finpay-app/values-prod.yaml
@@ -12,7 +12,7 @@ iam:
   # IAM Role ARNs for Service Accounts
   paymentApiRoleArn: "arn:aws:iam::408502715963:role/finpay-payment-api-role"
   paymentWorkerRoleArn: "arn:aws:iam::408502715963:role/finpay-payment-worker-role"
-  externalSecretsRoleArn: arn:aws:iam::408502715963:role/finpay-external-secrets-role"
+  externalSecretsRoleArn: "arn:aws:iam::408502715963:role/finpay-external-secrets-role"
 
 # Production Configuration
 config:
