feat: add development configuration files

--- a/k8s/finpay-app/values-prod.yaml
+++ b/k8s/finpay-app/values-prod.yaml
@@ -1,4 +1,8 @@
 
+global:
+  namespace: prod
+  environment: prod
+
 # Production Ingress Configuration
 ingress:
   # ACM certificate ARN - OPTIONAL: Leave empty for HTTP-only (testing)
